--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 </head>
 
 <body>
-  <div id="curr-player">
-    X's turn!
-  </div>
-  <br>
+    <br>
 	<div class="wrapper">
 	  <div class="tile" id="0"></div><div class="tile" id="1"></div><div class="tile" id="2"></div>
 		<div class="tile" id="3"></div><div class="tile" id="4"></div><div class="tile" id="5"></div>
 		<div class="tile" id="6"></div><div class="tile" id="7"></div><div class="tile" id="8"></div>
+    
+    <center><h2 id="curr-player">orange's Turn</h2></center>
 	</div>
 </body>
 </html>
