--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script src="jquery-1.9.1.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   <script src="ttt.js"></script>
+  <script src="board.js"></script>
 </head>
 
 <body>
