added computerPlayer object and Node Object

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   <script src="ttt.js"></script>
   <script src="board.js"></script>
+  <script src="players.js"></script>
+  <script src="ttt_node.js"></script>
 </head>
 
 <body>
